@@ -1,5 +1,8 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - composition-based autoqc results db search via DBIx: allow for
+   a search query that contains fields from the main table
+
 release 62.6
  - make building the iRODS handle of npg_qc::autoqc::checks::genotype
    lazy to avoid calling baton until required at runtime
